# iaim

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ai_preprocess_test.py  analyze.py  analyze_8.py  docker-compose.yml  preprocessor.py  prompts.py  pyproject.toml  transcriptanalyzer.py
data/: questions.json  sample_transcript.txt
iaim/: __init__.py  preprocessor.py  prompts.py  transcriptanalyzer.py
modules/: preprocessor.py  transcriptanalyzer.py
modules/static/: prompts.py
